--- a/.ideavimrc
+++ b/.ideavimrc
@@ -3,12 +3,21 @@
 " You can find a list of commands here: https://jb.gg/h38q75
 " Find more examples here: https://jb.gg/share-ideavimrc
 
+let mapleader=' '
+
 set scrolloff=8
 set number relativenumber
+
+set hlsearch
 set incsearch
 set surround
 
+" clear search highlight
+nnoremap <silent> <C-l> :nohl<CR><C-l>
+
 nnoremap gi :action GotoImplementation<CR>
+vnoremap J :m '>+1<CR>gv=gv
+vnoremap K :m '<-2<CR>gv=gv
 
 " Don't use Ex mode, use Q for formatting.
 map Q gq
