--- a/.ideavimrc
+++ b/.ideavimrc
@@ -2,40 +2,45 @@
 "   the same commands as the original .vimrc configuration.
 " You can find a list of commands here: https://jb.gg/h38q75
 " Find more examples here: https://jb.gg/share-ideavimrc
+" Map IDE actions to IdeaVim: https://jb.gg/abva4t
+" Enable IdeaVim plugins: https://jb.gg/ideavim-plugins
 
-let mapleader=' '
+source ~/.vimrc
 
-set scrolloff=8
-set number relativenumber
+set idearefactormode=keep
 
-set hlsearch
-set incsearch
+set ideajoin
 set surround
-
-" clear search highlight
-nnoremap <silent> <C-l> :nohl<CR><C-l>
-
-nnoremap gi :action GotoImplementation<CR>
-vnoremap J :m '>+1<CR>gv=gv
-vnoremap K :m '<-2<CR>gv=gv
-
-" Don't use Ex mode, use Q for formatting.
-map Q gq
-
-" --- Enable IdeaVim plugins https://jb.gg/ideavim-plugins
+set exchange
 
 " Highlight copied text
 Plug 'machakann/vim-highlightedyank'
-" Commentary plugin
-Plug 'tpope/vim-commentary'
+Plug 'terryma/vim-multiple-cursors
 
+" clear search highlight
+nmap <silent> <C-l> :nohl<CR><C-l>
 
-"" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
-"" Map \r to the Reformat Code action
-"map \r <Action>(ReformatCode)
+nmap gi <Action>(GotoImplementation)
+nmap <leader>r <Action>(RenameElement)
+nmap <leader>c <Action>(Stop)
 
-"" Map <leader>d to start debug
-"map <leader>d <Action>(Debug)
+nmap <leader>pv <Action>(SelectInProjectView)
+nmap <leader>a <Action>(Annotate)
+nmap <leader>h <Action>(Vcs.ShowTabbedFileHistory)
+nmap <S-Space> <Action>(GotoNextError)
 
-"" Map \b to toggle the breakpoint on the current line
-"map \b <Action>(ToggleLineBreakpoint)
+nmap <leader>l <Action>(ReformatCode)
+nmap <leader>o <Action>(FileStructurePopup)
+nmap <leader>x <Action>(HideAllWindows)
+
+nmap <leader>h <Action>(HighlightUsagesInFile)
+nmap <leader>u <Action>(FindUsages)
+
+" split window
+nmap <leader>sv <Action>(SplitVertically)
+nmap <leader>sc <Action>(Unsplit)
+nmap <leader>v <Action>(NextSplitter)
+
+map mc <Plug>NextWholeOccurrence
+map mn <Plug>NextOccurrence
+
